--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
 
 </head>
 <body>
-    <header></header>
+    <header>
+        <!-- Navbar -->
+        <nav class="navbar">
+            <ul>
+                <li><a href="#">LOGO</a></li>
+                <li><a href="#"><button>Sign Up</button></a></li>
+            </ul>
+        </nav>
+        <!-- Hero Section -->
+         <div class="hero">
+            <h1>Cool Dark UI Template for<br>Webflow Agencies!</h1>
+            <button>Stay Focused</button>
+         </div>
+    </header>
 
     <section class="action"></section>
     <section class="user"></section>
