header section completed

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Launchpad</title>
+    <link rel="stylesheet" href="styles/style.css">
 
 </head>
 <body>
     <header>
         <!-- Navbar -->
         <nav class="navbar">
-            <ul>
-                <li><a href="#">LOGO</a></li>
-                <li><a href="#"><button>Sign Up</button></a></li>
-            </ul>
+            <a class="logo" href="#">LOGO</a>
+            <a href="#"><button>Sign Up</button></a>
         </nav>
         <!-- Hero Section -->
          <div class="hero">
