action section completed

--- a/index.html
+++ b/index.html
@@ -8,20 +8,32 @@
 
 </head>
 <body>
+    <!-- Header -->
     <header>
         <!-- Navbar -->
         <nav class="navbar">
             <a class="logo" href="#">LOGO</a>
-            <a href="#"><button>Sign Up</button></a>
+            <a href="#"><button  class="btn">Sign Up</button></a>
         </nav>
         <!-- Hero Section -->
          <div class="hero">
             <h1>Cool Dark UI Template for<br>Webflow Agencies!</h1>
-            <button>Stay Focused</button>
+            <button class="btn">Stay Focused</button>
          </div>
     </header>
 
-    <section class="action"></section>
+    <!-- Action Section -->
+    <section>
+        <div class="action">
+            <div class="action-info">
+                <h1>See It in Action</h1>
+                <p>Explore the live preview and imagine your<br>brand in this bold new look</p>
+                <button class="btn">Launch Live Preview</button>
+            </div>
+            <img src="./Assets/wc-mini.png" alt="wc-mini">
+        </div>
+    </section>
+
     <section class="user"></section>
     <section class="review"></section>
     <section class="focus"></section>
