user section completed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +8,20 @@
     <link rel="stylesheet" href="styles/style.css">
 
 </head>
+
 <body>
     <!-- Header -->
     <header>
         <!-- Navbar -->
         <nav class="navbar">
             <a class="logo" href="#">LOGO</a>
-            <a href="#"><button  class="btn">Sign Up</button></a>
+            <a href="#"><button class="btn">Sign Up</button></a>
         </nav>
         <!-- Hero Section -->
-         <div class="hero">
+        <div class="hero">
             <h1>Cool Dark UI Template for<br>Webflow Agencies!</h1>
             <button class="btn">Stay Focused</button>
-         </div>
+        </div>
     </header>
 
     <!-- Action Section -->
@@ -34,11 +36,40 @@
         </div>
     </section>
 
-    <section class="user"></section>
+    <!-- Productive User Section -->
+    <section>
+        <div class="user">
+            <div class="user-info">
+
+                <h1>Joined Thousands of Productive Users</h1>
+                <div class="all-users">
+
+                    <div class="text">
+                        <h1>50K</h1>
+                        <p>Active Users</p>
+                    </div>
+
+                    <div class="text">
+                        <h1>2M+</h1>
+                        <p>Focus Sessions</p>
+                    </div>
+
+                    <div class="text">
+                        <h1>95%</h1>
+                        <p>Satisfaction Rate</p>
+                    </div>
+
+                </div>
+                
+            </div>
+        </div>
+    </section>
+
     <section class="review"></section>
     <section class="focus"></section>
     <section class="newsletter"></section>
 
     <footer></footer>
 </body>
+
 </html>
