review section completed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Launchpad</title>
     <link rel="stylesheet" href="styles/style.css">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/db81b5445a.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -60,12 +62,65 @@
                     </div>
 
                 </div>
-                
+
             </div>
         </div>
     </section>
 
-    <section class="review"></section>
+    <!-- Review Section -->
+    <section>
+        <div class="review">
+            <h1>What our users say</h1>
+            <div class="review-info">
+                <div class="review-text">
+
+                    <i class="fa-solid fa-star"></i>&nbsp; <i class="fa-solid fa-star"></i>&nbsp; <i class="fa-solid fa-star"></i>&nbsp; <i class="fa-solid fa-star"></i>&nbsp; <i class="fa-solid fa-star"></i>
+                    <br><br>
+
+                    <h2>Loved by Designers</h2>
+                    <p>"This template instantly leveled up our 
+                        presence."-Studio Vertex</p>
+                    <div class="little">
+                        <img width="40px" height="40px" src="./Assets/avatar.png" alt="">
+                        <div>
+                        <h3>Reviewer name</h3>
+                        <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review-text">
+
+                    <i class="fa-solid fa-star"></i>&nbsp; <i class="fa-solid fa-star"></i>&nbsp; <i class="fa-solid fa-star"></i>&nbsp; <i class="fa-solid fa-star"></i>&nbsp; <i class="fa-solid fa-star"></i>
+                    <br><br>
+
+                    <h2>Loved by Designers</h2>
+                    <p>"This template instantly leveled up our presence."-Studio Vertex</p>
+                    <div class="little">
+                        <img width="40px" height="40px" src="./Assets/avatar.png" alt="">
+                        <div>
+                        <h3>Reviewer name</h3>
+                        <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review-text">
+
+                    <i class="fa-solid fa-star"></i>&nbsp; <i class="fa-solid fa-star"></i>&nbsp; <i class="fa-solid fa-star"></i>&nbsp; <i class="fa-solid fa-star"></i>&nbsp; <i class="fa-solid fa-star"></i>
+                    <br><br>
+
+                    <h2>Loved by Designers</h2>
+                    <p>"This template instantly leveled up our presence."-Studio Vertex</p>
+                    <div class="little">
+                        <img width="40px" height="40px" src="./Assets/avatar.png" alt="">
+                        <div>
+                        <h3>Reviewer name</h3>
+                        <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="focus"></section>
     <section class="newsletter"></section>
 
