newsletter section completed

--- a/index.html
+++ b/index.html
@@ -121,8 +121,27 @@
             </div>
         </div>
     </section>
+
     <section class="focus"></section>
-    <section class="newsletter"></section>
+
+    <!-- Newsletter Section -->
+    <section>
+        <div class="newsletter">
+            <h1>Let's Get in Touch</h1>
+            <form>
+                <label class="form-label" for="email">Email</label><br>
+                <input class="blank" type="text" id="email" placeholder="xyz@gmail.com"><br><br>
+
+                <label class="form-label" for="name">Name</label><br>
+                <input class="blank" type="text" name="" id="name" placeholder="full name"><br><br>
+
+                <label class="form-label" for="message">Message</label><br>
+                <textarea class="message" name="" id="message" placeholder="write your message...."></textarea>
+
+                <button class="btn">Get in Touch</button>
+            </form>
+        </div>
+    </section>
 
     <footer></footer>
 </body>
