--- a/index.html
+++ b/index.html
@@ -143,7 +143,17 @@
         </div>
     </section>
 
-    <footer></footer>
+    <!-- Footer -->
+    <footer>
+        <div class="foot">
+            <h1>LOGO</h1>
+            <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">How it Works</a>
+            <a href="#">Services</a>
+        </div>
+    </footer>
 </body>
 
 </html>
