minimal change in theme

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 
                     <h2>Loved by Designers</h2>
                     <p>"This template instantly leveled up our 
-                        presence."-Studio Vertex</p>
+                        presence."-Studio Dream Apt</p>
                     <div class="little">
-                        <img width="40px" height="40px" src="./Assets/avatar.png" alt="">
+                        <img width="40px" height="40px" src="./Assets/Rosé.png" alt="">
                         <div>
-                        <h3>Reviewer name</h3>
-                        <p>Date</p>
+                        <h3>Roseanne Park (Rosé)</h3>
+                        <p>Feb 11, 2025</p>
                         </div>
                     </div>
                 </div>
@@ -94,12 +94,12 @@
                     <br><br>
 
                     <h2>Loved by Designers</h2>
-                    <p>"This template instantly leveled up our presence."-Studio Vertex</p>
+                    <p>"This template instantly leveled up our presence."-Studio LLOUD</p>
                     <div class="little">
-                        <img width="40px" height="40px" src="./Assets/avatar.png" alt="">
+                        <img width="40px" height="40px" src="./Assets/lisa.png" alt="">
                         <div>
-                        <h3>Reviewer name</h3>
-                        <p>Date</p>
+                        <h3>Lalisa Manoban</h3>
+                        <p>March 27, 2025</p>
                         </div>
                     </div>
                 </div>
@@ -109,12 +109,12 @@
                     <br><br>
 
                     <h2>Loved by Designers</h2>
-                    <p>"This template instantly leveled up our presence."-Studio Vertex</p>
+                    <p>"This template instantly leveled up our presence."-Studio ODD ATELIER</p>
                     <div class="little">
-                        <img width="40px" height="40px" src="./Assets/avatar.png" alt="">
+                        <img width="40px" height="40px" src="./Assets/Jennie.png" alt="">
                         <div>
-                        <h3>Reviewer name</h3>
-                        <p>Date</p>
+                        <h3>Jennie Kim</h3>
+                        <p>January 16, 2025</p>
                         </div>
                     </div>
                 </div>
