added focus section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,15 @@
         </div>
     </section>
 
-    <section class="focus"></section>
+    <!-- Focus Section -->
+    <section>
+        <div class="focus">
+            <h1>Ready to focus better</h1>
+            <p>This template instantly leveled up our presence.” - Studio Blisoo</p>
+            <button class="btn">Get Started Free</button>
+            <img src="./Assets/wc-big.png" alt="picture">
+        </div>
+    </section>
 
     <!-- Newsletter Section -->
     <section>
